<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="LoginText">Login</string>
    <string name="PasswordText">password</string>
    <string name="LoginHint">login name</string>
    <string name="RadioButton">RadioButton</string>
    <string name="SwitchText">What does this do?</string>
    <string name="CheckBox">CheckBox</string>
    <string name="SwitchOn">Switch is on</string>
    <string name="SwitchOff">Switch is off</string>
    <string name="FinishActivityPrompt">Do you want to finish the activity?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Response">Here is my response</string>
    <string name="PermissionRequired">Permission is required to use the camera</string>
    <string name="startChat">Start Chat</string>
    <string name="MsgSend">-></string>


</resources>